--- a/portfolio.css
+++ b/portfolio.css
@@ -4,12 +4,12 @@ body {
   background: #fff;
   margin: 0;
   padding: 0;
+  width: 100%;
 }
 .headspace {
   background: #fff;
-  width: 100%;
   margin: 0;
-  padding: 30px 20px;
+  padding-left: 20px;
 }
 .portrait {
   -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
@@ -56,10 +56,24 @@ h1.section-title {
   margin-bottom: 30px;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
+  h1 {
+    text-shadow: 2px 2px #35a7ff, -2px -2px #ff5964;
+  }
   h1.name {
     font-size: 66px;
     line-height: 50px;
+  }
+  
+  }
+
+@media screen and (max-width: 479px) {
+  h1 {
+    text-shadow: 1px 1px #35a7ff, -1px -1px #ff5964;
+  }
+  h1.name {
+    font-size: 33px;
+    line-height: 25px;
   }
   .portrait {
     width: 300px;
