--- a/portfolio.css
+++ b/portfolio.css
@@ -64,16 +64,18 @@ h1.section-title {
     font-size: 66px;
     line-height: 50px;
   }
-  
+  .portrait {
+    width: 450px;
   }
+}
 
 @media screen and (max-width: 479px) {
   h1 {
-    text-shadow: 1px 1px #35a7ff, -1px -1px #ff5964;
+    text-shadow: 2px 2px #35a7ff, -2px -2px #ff5964;
   }
   h1.name {
-    font-size: 33px;
-    line-height: 25px;
+    font-size: 50px;
+    line-height: 37.5px;
   }
   .portrait {
     width: 300px;
