added shadow animations to name. added name overlay as double shadow animation workaround

--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,38 @@
 @import url("https://fonts.googleapis.com/css?family=Lato|Overpass:400,600i");
 
+@-webkit-keyframes text-shadow-drop-tl {
+  0% {
+    text-shadow: 0 0 #ff5964;
+  }
+  100% {
+    text-shadow: -3px -3px #ff5964;
+  }
+}
+@keyframes text-shadow-drop-tl {
+  0% {
+    text-shadow: 0 0 #ff5964;
+  }
+  100% {
+    text-shadow: -3px -3px #ff5964;
+  }
+}
+@-webkit-keyframes text-shadow-drop-br {
+  0% {
+    text-shadow: 0 0 #35a7ff;
+  }
+  100% {
+    text-shadow: 3px 3px #35a7ff;
+  }
+}
+@keyframes text-shadow-drop-br {
+  0% {
+    text-shadow: 0 0 #35a7ff;
+  }
+  100% {
+    text-shadow: 3px 3px #35a7ff;
+  }
+}
+
 body {
   background: #fff;
   margin: 0;
@@ -22,10 +55,24 @@ h1 {
   /* word-wrap: break-word; */
 }
 h1.name {
+  z-index: 100;
   font-style: italic;
   font-weight: 600;
   font-size: 100px;
   line-height: 75px;
+  -webkit-animation: text-shadow-drop-tl 0.6s both;
+  animation: text-shadow-drop-tl 0.6s both;
+}
+h1.name-overlay {
+  position: absolute;
+  top: 0;
+  left: 20px;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 100px;
+  line-height: 75px;
+  -webkit-animation: text-shadow-drop-br 0.6s both;
+  animation: text-shadow-drop-br 0.6s both;
 }
 h1.section-title {
   font-style: italic;
@@ -56,10 +103,42 @@ h1.section-title {
 }
 
 @media screen and (max-width: 767px) {
+  @-webkit-keyframes text-shadow-drop-tl {
+    0% {
+      text-shadow: 0 0 #ff5964;
+    }
+    100% {
+      text-shadow: -2px -2px #ff5964;
+    }
+  }
+  @keyframes text-shadow-drop-tl {
+    0% {
+      text-shadow: 0 0 #ff5964;
+    }
+    100% {
+      text-shadow: -2px -2px #ff5964;
+    }
+  }
+  @-webkit-keyframes text-shadow-drop-br {
+    0% {
+      text-shadow: 0 0 #35a7ff;
+    }
+    100% {
+      text-shadow: 2px 2px #35a7ff;
+    }
+  }
+  @keyframes text-shadow-drop-br {
+    0% {
+      text-shadow: 0 0 #35a7ff;
+    }
+    100% {
+      text-shadow: 2px 2px #35a7ff;
+    }
+  }
   h1 {
     text-shadow: 2px 2px #35a7ff, -2px -2px #ff5964;
   }
-  h1.name {
+  h1.name, h1.name-overlay {
     font-size: 66px;
     line-height: 50px;
   }
@@ -74,10 +153,7 @@ h1.section-title {
 }
 
 @media screen and (max-width: 479px) {
-  h1 {
-    text-shadow: 2px 2px #35a7ff, -2px -2px #ff5964;
-  }
-  h1.name {
+  h1.name, h1.name-overlay {
     font-size: 50px;
     line-height: 37.5px;
   }
