added flexbox. added new screen width threshold. changed portrait size on screen width.

--- a/portfolio.css
+++ b/portfolio.css
@@ -46,6 +46,9 @@ body {
   margin: 0;
   padding: 0;
   width: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
 }
 .headspace {
   margin: 0 0 250px 0;
@@ -99,15 +102,18 @@ h1.section-title {
   background-color: #fff;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
 }
 .contact-logo {
   float: right;
   height: 50px;
   margin-right: 20px;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 875px) {
+  .portrait {
+    width: 400px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -159,7 +165,7 @@ h1.section-title {
     padding-left: 20px;
   }
   .portrait {
-    width: 450px;
+    width: 350px;
   }
 }
 
