--- a/portfolio.css
+++ b/portfolio.css
@@ -58,7 +58,10 @@ body {
   -webkit-clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
   clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
   float: right;
-  width: 600px;
+  position: absolute;
+  right: 20px;
+  top: 30px;
+  width: 500px;
 }
 h1 {
   font-family: "Overpass", sans-serif;
@@ -108,6 +111,13 @@ h1.section-title {
   height: 50px;
   margin-right: 20px;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 1100px) {
+  .portrait {
+    width: 400px;
+    position: static;
+  }
 }
 
 @media screen and (max-width: 875px) {
@@ -169,6 +179,15 @@ h1.section-title {
   }
 }
 
+@media screen and (max-width: 559px) {
+  .portrait {
+    float: none;
+  }
+  .portrait-wrapper {
+    text-align: center;
+  }
+}
+
 @media screen and (max-width: 479px) {
   .headspace {
     margin: 0 0 125px 0;
@@ -181,11 +200,9 @@ h1.section-title {
     font-size: 50px;
     line-height: 37.5px;
   }
+  h1.section-title {
+    font-size: 40px;
+  }
   .portrait {
     width: 300px;
-    float: none;
-  }
-  .portrait-wrapper {
-    text-align: center;
-  }
 }
